Bug 348338 - Cantor saves scripts as worksheets
Summary: Cantor saves scripts as worksheets
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-27 22:59 UTC by David E. Narvaez
Modified: 2017-10-23 16:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David E. Narvaez 2015-05-27 22:59:45 UTC
When saving (regular saving, not saving as plain text) the dialog offers the user the option to save a Cantor worksheet or the script based on the extension associated to the backend. Whatever the user chooses, Cantor saves a worksheet.

Reproducible: Always

Steps to Reproduce:
1. Use any backend
2. Write something
3. Save (Ctrl + S or Ctr + Shift + S)
4. Choose the script extension in the Filter input box
5. Open the saved file in a text editor

Actual Results:  
The saved file is a binary file.

Expected Results:  
The saved file should be a script.
Comment 1 Alexander Semke 2016-10-24 19:20:01 UTC
Git commit 270f9bfc00ea0147185d0045eba1c659238fca4c by Alexander Semke.
Committed on 24/10/2016 at 19:18.
Pushed by asemke into branch 'master'.

Save session as a plain script file if the user asked to.

M  +12   -8    src/cantor_part.cpp

http://commits.kde.org/cantor/270f9bfc00ea0147185d0045eba1c659238fca4c