Save session as a plain script file if the user asked to.

BUG: 348338